@@ -1,5 +1,8 @@
 ChangeLog for the Astro project.
 
+20200821:
+	* fix locking error in SimFilterwheel
+
 20200820:
 	* add great circle path for simulated mount
 	* portability fix in snowfocuser
